# fastapi-template

./: README.md  pyproject.toml
